--- a/build.xml
+++ b/build.xml
@@ -3077,7 +3077,7 @@
             <mkdir dir="@{dir}/${install.src.ssg.applet}"/>
             <mkdir dir="@{dir}/${install.src.ssg.appletlib}"/>
             <mkdir dir="@{dir}/${install.src.ssg.attachment}"/>
-            <mkdir dir="@{dir}/${install.src.ssg.responsecache}"/>
+            <mkdir dir="@{dir}/${install.src.ssg.messagecache}"/>
             <mkdir dir="@{dir}/${install.src.ssg.base}"/>
             <mkdir dir="@{dir}/${install.src.ssg.bin}"/>
             <mkdir dir="@{dir}/${install.src.ssg.conf}"/>
