--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -384,11 +384,11 @@ attachmentDirectory.default = ${ssg.var}${fs}attachments
 attachmentDirectory.jndi = ${jndiPrefix}/AttachmentDirectory
 attachmentDirectory.systemProperty = ${propertyPrefix}.attachmentDirectory
 
-# default = /ssg/var/responsecache
-responseCacheDirectory.description = Directory in which to cache large response messages from the backend
-responseCacheDirectory.default = ${ssg.var}${fs}responsecache
-responseCacheDirectory.jndi = ${jndiPrefix}/ResponseCacheDirectory
-responseCacheDirectory.systemProperty = ${propertyPrefix}.responseCacheDirectory
+# default = /ssg/var/messageCache
+messageCacheDirectory.description = Directory in which to cache large response messages from the backend
+messageCacheDirectory.default = ${ssg.var}${fs}messageCache
+messageCacheDirectory.jndi = ${jndiPrefix}/messageCacheDirectory
+messageCacheDirectory.systemProperty = ${propertyPrefix}.messageCacheDirectory
 
 # default = /ssg/modules/assertions
 modularAssertionsDirectory.description = Directory in which to find modular assertion jarfiles
@@ -414,16 +414,16 @@ attachmentDiskThreshold.systemProperty = ${propertyPrefix}.attachmentDiskThresho
 attachmentDiskThreshold.clusterProperty = attachment.diskThreshold
 
 # default = 9096
-responseCacheDiskThreshold.description = Threshold for size of response messages to be cached on disk (Bytes)
-responseCacheDiskThreshold.default = 8096
-responseCacheDiskThreshold.jndi = ${jndiPrefix}/ResponseCacheDiskThreshold
-responseCacheDiskThreshold.systemProperty = ${propertyPrefix}.responseCacheDiskThreshold
-responseCacheDiskThreshold.clusterProperty = responseCache.diskThreshold
+messageCacheDiskThreshold.description = Threshold for size of response messages to be cached on disk (Bytes)
+messageCacheDiskThreshold.default = 8096
+messageCacheDiskThreshold.jndi = ${jndiPrefix}/messageCacheDiskThreshold
+messageCacheDiskThreshold.systemProperty = ${propertyPrefix}.messageCacheDiskThreshold
+messageCacheDiskThreshold.clusterProperty = messageCache.diskThreshold
 
-responseCacheResetGeneration.description = Incrementing the generation number clears all response caches created under a different generation number.
-responseCacheResetGeneration.default = 0
-responseCacheResetGeneration.systemProperty = ${propertyPrefix}.responseCacheResetGeneration
-responseCacheResetGeneration.clusterProperty = responseCache.resetGeneration
+messageCacheResetGeneration.description = Incrementing the generation number clears all response caches created under a different generation number.
+messageCacheResetGeneration.default = 0
+messageCacheResetGeneration.systemProperty = ${propertyPrefix}.messageCacheResetGeneration
+messageCacheResetGeneration.clusterProperty = messageCache.resetGeneration
 
 # Symantec AntiVirus ScanEngine (savseEnable = yes to enable scanning)
 savseEnable.description = Whether or not this gateway has access to a sav scan engine to do virus scanning
