Per the comment #22 in the SSM-2617, revised the description of the new step, "Service Resolution" in the Publish SOAP Web Service wizard.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25575 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/ServiceResolutionPanel.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/ServiceResolutionPanel.properties
@@ -1,2 +1,2 @@
 step.label=Service Resolution
-step.description=By default the option 'No resolution path' is on and the service resolution path is set as '/ssg/soap', but you can customize it by choosing the option 'Custom resolution path'.  You may modify the resolution path under the 'HTTP/FTP' tab in a 'Published Service Properties' dialog later on.
+step.description=The default "No resolution path" indicates the service does not have a custom resolution path; all requests are sent to the default Gateway URI "/ssg/soap".  Use "Custom resolution path" to send requests to any other URI.  You may change this setting later using the [HTTP/FTP] tab in the Published Service Properties.
