bug 8468: Updated cache assertion UI labels.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25577 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -414,13 +414,13 @@ attachmentDiskThreshold.systemProperty = ${propertyPrefix}.attachmentDiskThresho
 attachmentDiskThreshold.clusterProperty = attachment.diskThreshold
 
 # default = 9096
-messageCacheDiskThreshold.description = Threshold for size of response messages to be cached on disk (Bytes)
+messageCacheDiskThreshold.description = Threshold for size of messages to be cached on disk (Bytes)
 messageCacheDiskThreshold.default = 8096
 messageCacheDiskThreshold.jndi = ${jndiPrefix}/messageCacheDiskThreshold
 messageCacheDiskThreshold.systemProperty = ${propertyPrefix}.messageCacheDiskThreshold
 messageCacheDiskThreshold.clusterProperty = messageCache.diskThreshold
 
-messageCacheResetGeneration.description = Incrementing the generation number clears all response caches created under a different generation number.
+messageCacheResetGeneration.description = Incrementing the generation number clears all message caches created under a different generation number.
 messageCacheResetGeneration.default = 0
 messageCacheResetGeneration.systemProperty = ${propertyPrefix}.messageCacheResetGeneration
 messageCacheResetGeneration.clusterProperty = messageCache.resetGeneration
