Revised the description of the new step "Service Resolution" in the Publish SOAP Web Service wizard, per the comment #24 in the SSM-2617.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25579 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/ServiceResolutionPanel.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/ServiceResolutionPanel.properties
@@ -1,2 +1,2 @@
 step.label=Service Resolution
-step.description=The default "No resolution path" indicates the service does not have a custom resolution path; all requests are sent to the default Gateway URI "/ssg/soap".  Use "Custom resolution path" to send requests to any other URI.  You may change this setting later using the [HTTP/FTP] tab in the Published Service Properties.
+step.description=The default option 'No resolution path' sets the service resolution path to '/ssg/soap'. To use another resolution path instead, select 'Custom resolution path' and then specify a custom URI. The resolution path can also be modified under the [HTTP/FTP] tab in the Published Service Properties later.
