Gateway management API and service progress including Javadoc, service and policy fragment accessors and JAXB serialization tests.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25583 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/GatewayManagementAssertion/build.xml
+++ b/modules/gateway/assertions/GatewayManagementAssertion/build.xml
@@ -1,5 +1,8 @@
 <project name="GatewayManagementAssertion" default="compile" xmlns:ivy="antlib:org.apache.ivy.ant">
-    <property name="privateLibraries" value="AAR-INF/lib/wiseman.jar"/>
+    <property name="privateLibraries" value="AAR-INF/lib/hibernate-validator-4.0.2.GA.jar
+                                             AAR-INF/lib/layer7-gateway-api-5.3.jar
+                                             AAR-INF/lib/layer7-policy-exporter-5.3.jar
+                                             AAR-INF/lib/wiseman-1.0.jar"/>    
 
     <import file="../assertion-build.xml"/>
 
