--- a/modules/gateway/gateway-management-client/src/main/resources/com/l7tech/gateway/client/GatewayManagementClient.properties
+++ b/modules/gateway/gateway-management-client/src/main/resources/com/l7tech/gateway/client/GatewayManagementClient.properties
@@ -9,7 +9,7 @@ message.ioerror=I/O error ''{0}''
 message.servernottrusted=Server TLS/SSL certificate is not trusted.
 message.notfound=No resource matched the specified name or identifier.
 message.notauthorized=Not authorized to access Gateway Management service.
-message.soapfault=SOAP Fault from service:\n  Fault: {0}\n  Code: {1}\n  Role: {2}\n  Details: {3}
+message.soapfault=SOAP Fault from service:\n  Fault: {0}\n  Role: {1}\n  Details: {2}
 
 error.datetime=Date/Time:\n\t{0}\n\n
 error.version=Version:\n\t{0}\n\n
