--- a/modules/gateway/assertions/GatewayManagementAssertion/ivy.xml
+++ b/modules/gateway/assertions/GatewayManagementAssertion/ivy.xml
@@ -21,9 +21,11 @@
 	<dependencies>
 
         <dependency name="layer7-gateway-api" rev="latest.integration" force="true" conf="core->master"/>
-        <dependency name="layer7-policy-exporter" rev="latest.integration" force="true" conf="core"/>
-        <dependency org="javax.validation" name="validation-api" rev="1.0.0.GA" force="true" conf="core"/>
-        <dependency org="org.hibernate" name="hibernate-validator" rev="4.0.2.GA" force="true" conf="core"/>
+        <dependency name="layer7-policy-exporter" rev="latest.integration" force="true" conf="core->master"/>
+        <dependency org="org.hibernate" name="hibernate-validator" rev="4.0.2.GA" force="true" conf="core">
+            <exclude org="org.slf4j" module="slf4j-api" name="*" type="*" ext="*" conf=""
+                     matcher="exact"/>
+        </dependency>
         <dependency name="wiseman" org="net.java.wiseman" rev="1.0" force="true" conf="core"/>
 
         <dependency name="layer7-modular-assertions" rev="latest.integration" force="true"
