Gateway management API and service progress including Javadoc and changes to the API (added AccessibleObject).
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25587 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/gateway-management-client/src/main/resources/com/l7tech/gateway/client/GatewayManagementClient.properties
+++ b/modules/gateway/gateway-management-client/src/main/resources/com/l7tech/gateway/client/GatewayManagementClient.properties
@@ -63,6 +63,7 @@ usage=\
 
 help.types=\
   The available types are:\n\
+  \n\
   \tclusterProperty    : Configuration settings.\n\
   \tfolder             : Organisational folders.\n\
   \tidentityProvider   : User and group repositories.\n\
@@ -80,7 +81,7 @@ help.common=\
     \n\
     To use an HTTP proxy server use the '-proxyHost' and '-proxyPort' options,\n\
     credentials for the proxy can be given using the '-proxyUsername' and\n\
-    '-proxyPassword' or '-proxyPasswordFile' options.\n\n
+    '-proxyPassword' or '-proxyPasswordFile' options.\n\
     \n\
     When using TLS/SSL the options '-skipVerifyCertificate' and \n\
     '-skipVerifyHostname' allow verification checks to be disabled (this is\n\
@@ -227,12 +228,14 @@ help.command.import=\
   target system will not be modified.\n\
   \n\
   The following import instructions can be used:\n\
+  \n\
   \taccept  : The dependency is imported as-is.\n\
   \tremove  : Any assertions using the dependency are not imported.\n\
   \trename  : The dependency is renamed and imported.\n\
   \treplace : The dependency is replaced with an alternative.\n\
   \n\
   Examples:\n\
+  \n\
   \t   1. -import accept IdProviderReference 1000\n\
   \t   2. -import remove IdProviderReference 1000\n\
   \t   3. -import replace IdProviderReference 1000 1045\n\
