Minor build changes for gateway management API / modular assertion.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25588 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -2490,6 +2490,7 @@
                 version="true"
                 author="false"
                 use="true"
+                public="true"
                 windowtitle="Layer 7 Gateway Management API">
 
             <!--links to j2se & j2ee javadocs provided so they can be linked to from within the layer7-api javadoc -->
