--- a/modules/xmlvpnclient/ivy.xml
+++ b/modules/xmlvpnclient/ivy.xml
@@ -44,5 +44,7 @@
         <dependency org="junit" name="junit" rev="4.7" force="true" conf="test"/>
         <!-- For the XVC and Bridge API, we'll always use the FIPS version of RSA for the time being -->
         <dependency org="com.rsa" name="jsafe-jce-fips" rev="4.1" force="true" conf="core"/>
+        <dependency org="com.rsa" name="certj" rev="3.1" force="true" conf="core"/>
+        <dependency org="com.rsa" name="sslj" rev="5.1.1" force="true" conf="core"/>
     </dependencies>
 </ivy-module>
