Remove unnecessary dependencies and clean up CXF ivy files.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25614 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -112,5 +112,6 @@
         <exclude org="com.sun.xml.fastinfoset" module="FastInfoset" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="org.apache.cxf" module="cxf-rt-transports-http-jetty" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="xerces" module="xmlParserAPIs" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
+        <exclude org="xml-apis" module="xml-apis" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
     </dependencies>
 </ivy-module>
