--- a/modules/gateway/processcontroller/ivy.xml
+++ b/modules/gateway/processcontroller/ivy.xml
@@ -38,6 +38,7 @@
         <dependency org="org.slf4j" name="slf4j-api" rev="1.5.8" force="true" conf="core"/>
         <dependency org="org.slf4j" name="slf4j-jdk14" rev="1.5.8" force="true" conf="core"/>
         <dependency org="org.snmp4j" name="snmp4j" rev="1.10.1" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-web" rev="2.5.6" force="true" conf="core"/>
 
         <dependency org="bouncycastle" name="bcprov-jdk16" rev="143" force="true" conf="core"/>
 
@@ -49,6 +50,7 @@
         <dependency org="junit" name="junit" rev="4.7" force="true" conf="test"/>
 
         <exclude org="xerces" module="xmlParserAPIs" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
+        <exclude org="xml-apis" module="xml-apis" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
         <exclude org="com.sun.xml.fastinfoset" module="FastInfoset" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
 
         <override org="org.mortbay.jetty" module="jetty" matcher="exact" rev="6.1.8"/>
