Fixed SEVERE exception on Gateway startup when using software crypto.  Moved certj and sslj from runtime/lib to runtime/lib/alt. The RsaJceProviderEngine now attempts to include the certj and sslj jars in the URLClassLoader it uses to dynamically load an appropriate cryptoj version (depending on whether FIPS is enabled).  Within the XVC, or when launched from Idea, it continues to just find everything via the context classloader.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25615 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -86,9 +86,6 @@
                      matcher="exact"/>
         </dependency>
 
-        <dependency org="com.rsa" name="certj" rev="3.1" force="true" conf="core"/>
-        <dependency org="com.rsa" name="sslj" rev="5.1.1" force="true" conf="core"/>
-
         <!-- Optional dependencies -->
         <dependency org="com.ibm.mq" name="mq6" rev="6.0.2.2" force="true" conf="optional"/>
         <dependency org="com.tarari" name="tarari-raxj" rev="4.4.3.31" force="true" conf="optional"/>
@@ -99,6 +96,8 @@
         <!-- Alternative dependencies -->
         <dependency org="com.rsa" name="jsafe-jce" rev="4.1.0.1" force="true" conf="alternative"/>
         <dependency org="com.rsa" name="jsafe-jce-fips" rev="4.1" force="true" conf="alternative"/>
+        <dependency org="com.rsa" name="certj" rev="3.1" force="true" conf="test,alternative"/>
+        <dependency org="com.rsa" name="sslj" rev="5.1.1" force="true" conf="test,alternative"/>
 
         <!-- Test dependencies -->
         <dependency org="junit" name="junit" rev="4.7" force="true" conf="test"/>
