--- a/modules/gateway/common/ivy.xml
+++ b/modules/gateway/common/ivy.xml
@@ -27,6 +27,7 @@
         <dependency name="layer7-identity" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-policy" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-uddi" rev="latest.integration" force="true" conf="core"/>
+        <dependency name="layer7-test" rev="latest.integration" force="true" conf="test"/>
         <dependency org="aopalliance" name="aopalliance" rev="1.0" force="true" conf="core"/>
         <dependency org="javax.validation" name="validation-api" rev="1.0.0.GA" force="true" conf="core"/>
         <!-- Hibernate annotations used on beans -->
