SSG-3699: The BRA and HTTP routing assertions no longer pay attention to the io.httpDisableKeepAlive cluster property and are 100% controlled by the setting of the keep-alives check box in their properties dialog.  The io.httpDisableKeepAlive property remains for configuring other outbound HTTP connections that might need keepalives disabled but lack their own configuration for doing so; as of Pandora, only the WSDM subscription notifier pays attention to its value.  The cluster property description has been updated to clarify that it does not apply to routing assertions.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25647 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -514,7 +514,7 @@ ioHttpUseExpectContinue.description = Use an HTTP 1.1 Expect/Continue handshake 
 ioHttpUseExpectContinue.default = false
 ioHttpUseExpectContinue.clusterProperty = io.httpExpectContinue
 
-ioHttpNoKeepAlive.description = Disable HTTP Keep-Alive connections (true/false)
+ioHttpNoKeepAlive.description = Disable HTTP Keep-Alive connections for outbound HTTP connections (other than routing assertions) (true/false)
 ioHttpNoKeepAlive.default = false
 ioHttpNoKeepAlive.clusterProperty = io.httpDisableKeepAlive
 
