Gateway management changes. Add tests and a few related fixes. EntityManager stubs are updated to support initialization.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25684 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/gateway-management-client/src/main/resources/com/l7tech/gateway/client/GatewayManagementClient.properties
+++ b/modules/gateway/gateway-management-client/src/main/resources/com/l7tech/gateway/client/GatewayManagementClient.properties
@@ -1,6 +1,8 @@
 # Resource bundle for GatewayManagementClient
 
 message.version=Version {0}
+message.unknowncommand=Command ''{0}'' not recognized.
+message.commandnotsupported=Command not supported for type ''{0}''.
 message.unexpectederror=An unexpected error occurred ''{0}''.
 message.errorreport=See error report for more details ''{0}''.
 message.errorreporterror=Unable to save error report ''{0}'' due to ''{1}''.
@@ -9,6 +11,7 @@ message.ioerror=I/O error ''{0}''
 message.servernottrusted=Server TLS/SSL certificate is not trusted.
 message.notfound=No resource matched the specified name or identifier.
 message.notauthorized=Not authorized to access Gateway Management service.
+message.accessdenied=Permission denied when accessing resource.
 message.soapfault=SOAP Fault from service:\n  Fault: {0}\n  Role: {1}\n  Details: {2}
 
 error.datetime=Date/Time:\n\t{0}\n\n
@@ -128,15 +131,17 @@ help.command.get=\
 
 help.command.put=\
   put: Update the identified resource of the specified type.\n\
-  usage: 1. put -type TYPE -inFile PATH\n\
+  usage: 1. put -type TYPE -inFile PATH -outFile PATH\n\
   \t   2. put -type TYPE -in RESOURCE\n\
   \n\
   \t1. Update the resource of type 'TYPE' using the resource \n\
-  \t   representation from 'PATH'. The identifier for the resource is\n\
+  \t   representation from 'PATH'. The updated resource will be\n\
+  \t   output to the file 'PATH'. The identifier for the resource is\n\
   \t   read from the file.\n\
   \n\
   \t2. Update the resource of type 'TYPE' using the resource \n\
-  \t   representation 'RESOURCE'. The identifier for the resource is\n\
+  \t   representation 'RESOURCE'. The updated resource will be\n\
+  \t   output to the console. The identifier for the resource is\n\
   \t   read from the given resource.\n\
   \n\
   {0}\
