--- a/modules/gateway/gateway-api/ivy.xml
+++ b/modules/gateway/gateway-api/ivy.xml
@@ -23,7 +23,7 @@
     </publications>
     <dependencies>
         <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="wiseman-client" org="net.java.wiseman" rev="1.0" force="true" conf="core"/>
+        <dependency name="wiseman-client" org="net.java.wiseman" rev="1.0-l7p1" force="true" conf="core"/>
         <dependency name="wiseman-core" org="net.java.wiseman" rev="1.0" force="true" conf="core"/>        
 
         <dependency org="junit" name="junit" rev="4.7" force="true" conf="test"/>
