SSM-2670: fixed by adding new server config property "documentDownload.maxSize" which is the default max size value for all WSDL, Schema, XSL and XACML Policy document downloads. Added new cluster properties wsdlDocMaxDownloadSize, xslDocMaxDownloadSize and xacml.pdp.maxDownloadSize to allow for the default to be overridden dynamically for each document type. All documents are now downloaded via the gateway and support SSL. Documents configured in advance can also specific URL authentication.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25721 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/XslTransformationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/XslTransformationPropertiesDialog.properties
@@ -13,7 +13,7 @@ error.window.title=XSL Transformation Error
 # error messages
 error.nourl=Please provide a valid URL.
 error.badurl=This is not a well formed URL.
-error.urlnocontent=No content could be retrieved at that URL.
+error.urlnocontent=No content could be retrieved at URL
 error.noxmlaturl=Cannot parse the XML from that URL.
 error.notxslt=The XSL is missing or invalid.
 error.urlnoxslt=The document at URL is not a valid XSLT.
