--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -2,6 +2,17 @@
 # Server Configuration Properties (used by ServerConfig)
 #
 
+#
+# FYI: When defining a proprety with a default of another property e.g. myproperty.default= ${myotherprop},
+# then myotherprop should only be available as a system property. It is not currently intended for default
+# properties to be dynamic.
+# If it is also available as a cluster property, and a value has been supplied (i.e. it exists in cluster_properties)
+# then on gateway start up, it is possible that the value used for myotherprop will be its default value
+# and not the value from the database, depending on whether or not the default values in the cache have expired
+# or not before the property is read. Really only an issue if the value is read once during assertion initialization
+# for example
+#
+
 ssgBase.description = "Base of the SSG Installation"
 ssgBase.systemProperty = com.l7tech.server.base
 ssgBase.default = /opt/SecureSpan
@@ -623,7 +634,7 @@ schemaRecompileMaxAge.systemProperty = ${propertyPrefix}.schemacache.recompileMa
 schemaRecompileMaxAge.clusterProperty = schemacache.recompileMaxAge
 
 schemaCacheMaxSchemaSize.description = Maximum size of schema allowed into the schema cache (bytes)
-schemaCacheMaxSchemaSize.default = 1000000
+schemaCacheMaxSchemaSize.default = ${documentDownload.maxSize}
 schemaCacheMaxSchemaSize.systemProperty = ${propertyPrefix}.schemacache.maxSchemaSize
 schemaCacheMaxSchemaSize.clusterProperty = schemacache.maxSchemaSize
 
@@ -1190,3 +1201,16 @@ jdbcConnection.driverClass.defaultList.description=The default list of supported
 jdbcConnection.driverClass.defaultList.default=com.mysql.jdbc.Driver
 jdbcConnection.driverClass.defaultList.clusterProperty=jdbcConnection.driverClass.defaultList
 jdbcConnection.driverClass.defaultList.visible=true
+
+# 10485760  1024 * 1024 * 10
+documentDownload.maxSize.description=Default upper limit for documents downloaded via the Gateway. Default is 10MB.
+documentDownload.maxSize.default=10485760
+documentDownload.maxSize.systemProperty=${propertyPrefix}.documentDownload.maxSize
+
+wsdlDocMaxDownloadSize.description = Maximum size of WSDL document which can be remotely downloaded
+wsdlDocMaxDownloadSize.default = ${documentDownload.maxSize}
+wsdlDocMaxDownloadSize.clusterProperty = wsdlDownload.maxSize
+
+xslDocMaxDownloadSize.description = Maximum size of XSL document which can be remotely downloaded
+xslDocMaxDownloadSize.default = ${documentDownload.maxSize}
+xslDocMaxDownloadSize.clusterProperty = xslDownload.maxSize
