SSM-2670: updated description for schemaCacheMaxSchemaSize.description and for the other max download size cluster properties
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25722 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -633,7 +633,7 @@ schemaRecompileMaxAge.default = 20000
 schemaRecompileMaxAge.systemProperty = ${propertyPrefix}.schemacache.recompileMaxAge
 schemaRecompileMaxAge.clusterProperty = schemacache.recompileMaxAge
 
-schemaCacheMaxSchemaSize.description = Maximum size of schema allowed into the schema cache (bytes)
+schemaCacheMaxSchemaSize.description = Maximum size in bytes of a Schema document download
 schemaCacheMaxSchemaSize.default = ${documentDownload.maxSize}
 schemaCacheMaxSchemaSize.systemProperty = ${propertyPrefix}.schemacache.maxSchemaSize
 schemaCacheMaxSchemaSize.clusterProperty = schemacache.maxSchemaSize
@@ -1202,15 +1202,15 @@ jdbcConnection.driverClass.defaultList.default=com.mysql.jdbc.Driver
 jdbcConnection.driverClass.defaultList.clusterProperty=jdbcConnection.driverClass.defaultList
 jdbcConnection.driverClass.defaultList.visible=true
 
-# 10485760  1024 * 1024 * 10
-documentDownload.maxSize.description=Default upper limit for documents downloaded via the Gateway. Default is 10MB.
+# 10485760 = 1024 * 1024 * 10
+documentDownload.maxSize.description=Maximum default size in bytes of a document download. Default is 10MB.
 documentDownload.maxSize.default=10485760
 documentDownload.maxSize.systemProperty=${propertyPrefix}.documentDownload.maxSize
 
-wsdlDocMaxDownloadSize.description = Maximum size of WSDL document which can be remotely downloaded
+wsdlDocMaxDownloadSize.description = Maximum size in bytes of a WSDL document download
 wsdlDocMaxDownloadSize.default = ${documentDownload.maxSize}
 wsdlDocMaxDownloadSize.clusterProperty = wsdlDownload.maxSize
 
-xslDocMaxDownloadSize.description = Maximum size of XSL document which can be remotely downloaded
+xslDocMaxDownloadSize.description = Maximum size in bytes of a XSL document download
 xslDocMaxDownloadSize.default = ${documentDownload.maxSize}
 xslDocMaxDownloadSize.clusterProperty = xslDownload.maxSize
