Gateway management API change to trunk to match fixes made during merge to 5.2 branch.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25757 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/gateway-api/build.xml
+++ b/modules/gateway/gateway-api/build.xml
@@ -1,5 +1,6 @@
 <project name="layer7-gateway-api" default="compile">
     <property name="module.package.root" value="com/l7tech/gateway/api"/>
     <property name="module.sign" value="true"/>
+    <property name="module.version.target" value="1.0"/>
     <import file="../../../etc/build/build-common.xml"/>
 </project>
