--- a/build.xml
+++ b/build.xml
@@ -1538,6 +1538,7 @@
         <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-orm-2.5.6.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-tx-2.5.6.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-web-2.5.6.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/validation-api-1.0.0.GA.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/whirlycache-1.0.1.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/wsdl4j-1.6.2-l7p1.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/xalan-2.7.1.jar"/>
