IDEA project build updated to support new build.properties option "idea.ant.integration=true/false" to enable/disable IDEA Ant post-compile integration (currently for ESM report compilation only)
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25759 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -596,6 +596,7 @@
             <param name="data" expression="${build.etc}/modules.xml"/>
             <param name="datalibs" expression="${build.etc}/module-dependencies.xml"/>
             <param name="projectmeta" expression="${src.root}/etc/build/idea_meta.xml"/>
+            <param name="idea.ant.integration" expression="${idea.ant.integration}" if="idea.ant.integration"/>
             <param name="idea.javac.out" expression="${idea.javac.out}" if="idea.javac.out"/>
             <param name="idea.jdk" expression="${idea.jdk}" if="idea.jdk"/>
         </xslt>
