bug 7320: Added system property for configuring the sessionid path parameter and cookie name used by the gateway's embedded servlet container. Default value is "ssgsessionid".
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25768 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -161,6 +161,10 @@ interfaceTags.description = Available named interfaces and their corresponding a
 interfaceTags.default = loopback(127.0.0.1)
 interfaceTags.clusterProperty = interfaceTags
 
+httpSessionName.default = ssgsessionid
+httpSessionName.description = Session parameter and cookie name to be used by tomcat for session identification.
+httpSessionName.systemProperty = ${propertyPrefix}.httpSessionId
+
 #
 # The port used for internode communications in a cluster
 #
